# ChangeLog for dev-python/pychecker
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pychecker/ChangeLog,v 1.46 2009/10/11 09:39:08 grobian Exp $

  11 Oct 2009; Fabian Groffen <grobian@gentoo.org> pychecker-0.8.18.ebuild:
  Merge from Prefix

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org> pychecker-0.8.18.ebuild:
  alpha/ia64 stable wrt #278174

  22 Jul 2009; Jeremy Olexa <darkside@gentoo.org> pychecker-0.8.18.ebuild:
  amd64 stable, bug 278174

  21 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  pychecker-0.8.18.ebuild:
  stable x86, bug 278174

  17 Jul 2009; nixnut <nixnut@gentoo.org> pychecker-0.8.18.ebuild:
  ppc stable #278174

  17 Jul 2009; Ferris McCormick <fmccor@gentoo.org> pychecker-0.8.18.ebuild:
  Sparc stable, Bug #278174.

  17 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pychecker-0.8.18.ebuild:
  Fix path in /usr/bin/pychecker (bug #265384).

*pychecker-0.8.18 (04 Jan 2009)

  04 Jan 2009; Patrick Lauer <patrick@gentoo.org>
  +files/pychecker-0.8.18-pychecker2.patch, +pychecker-0.8.18.ebuild:
  Bump to 0.8.18, fixes part of #216970, thanks to Frank Richter

*pychecker-0.8.17-r1 (01 Sep 2008)

  01 Sep 2008; Ali Polatel <hawking@gentoo.org>
  +files/pychecker-0.8.17-no-data-files.patch, +pychecker-0.8.17-r1.ebuild:
  Revision bump. Add patch by René 'Necoro' Neumann not to install data
  files under site-packages, #236365

  17 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
  pychecker-0.8.17.ebuild:
  amd64 stable wrt bug #204472

  17 Feb 2008; Raúl Porcel <armin76@gentoo.org> pychecker-0.8.17.ebuild:
  alpha/ia64 stable wrt #204472

  16 Feb 2008; Markus Meier <maekke@gentoo.org> pychecker-0.8.17.ebuild:
  x86 stable, bug #204472

  15 Feb 2008; nixnut <nixnut@gentoo.org> pychecker-0.8.17.ebuild:
  Stable on ppc wrt bug 204472

  15 Feb 2008; Ferris McCormick <fmccor@gentoo.org> pychecker-0.8.17.ebuild:
  Sparc stable, Bug #204472.
