@@ -1,9 +1,6 @@
 AUX pychecker-0.8.17-no-data-files.patch 683 RMD160 c27905b3ceb11a917d17337c88675dc6095169d1 SHA1 b4922f581e6ff027c12185e064ac5877194f5123 SHA256 44c7aebc4e436c61961fd308447c88a4c0c57f0b44e23b96dac60d3da6a9a7b9
 AUX pychecker-0.8.18-pychecker2.patch 599 RMD160 f2ac793a3e2d04cac5f28df6850f57dc9c1cd8a9 SHA1 1d7275fd7464fbc9157c645209f0c7d8f6a709bb SHA256 8f294af0029cad0acbfa9a3a7a3778f8205cf0097fe3ba397e0f676cec08d551
-DIST pychecker-0.8.17.tar.gz 130689 RMD160 16a83bcbd45b14fd5fb786e7a8ce52c7ecc87eb6 SHA1 0adde984d4275a0e80e35d08c6f5c6a6a9131a05 SHA256 7ee4ea2fc02151196590cdef6073302dd61156503ee242a68a3c8aff50e86e52
 DIST pychecker-0.8.18.tar.gz 145784 RMD160 e3d30443c955757cb67353888df41a10f8e8eece SHA1 fae410ab70523dfc8077eeb0fbf4ad11dee4a5f5 SHA256 6495fe464659b175cefce20b187de6904b97b065fd609445b932d9c49a75a024
-EBUILD pychecker-0.8.17-r1.ebuild 717 RMD160 9670f3cee341fb8cefce73efb890b42b38773fc7 SHA1 15d36263b1578e7bee14a31d00970c38c0d36aa8 SHA256 7c9821233ba2d29ff8cd9d3e2769539559619814c2aa36b9de997e61f878b447
-EBUILD pychecker-0.8.17.ebuild 809 RMD160 8252eec14549888948562b3ff7c6e7cb41b6ff88 SHA1 31a5510dbac068c67d3954a24986053a776013c4 SHA256 6fc57efe14bedd0b51343d11f7c8e2c3eb67ee2234612192bf872fffa3d0dbad
-EBUILD pychecker-0.8.18.ebuild 1023 RMD160 dff224ce79ea58b453c0fc314dc6ed737d1913dd SHA1 6921de25b07d858ab1893366f3542ed010000145 SHA256 f2620f4ca6120f8f67b8f2af9ce68dd035c1fb1c6c6693027f5ffde8407fea68
-MISC ChangeLog 6018 RMD160 177a419759d68e1b5692db082f28e9c47aba8496 SHA1 45737ec55e1df58ed5481ebb5a505e345f46bd24 SHA256 a525136a8ad2b122966028511346de868453ad7df57b1661d66535944b714aa1
+EBUILD pychecker-0.8.18.ebuild 963 RMD160 4059a4969208000672c5c24127d4c6f8ddc2459b SHA1 7268b2c33b797b4b1dea78da22411eaedbc00262 SHA256 aaae169721cb02a9f4cc4c53beecc41705878a4768d9f60ef6c03ade4dd1ec41
+MISC ChangeLog 6147 RMD160 9bede5a2c110ee57ffb6425a11a797b21f93ca53 SHA1 35830de04ddad952f7ad62963ebb2b1432312329 SHA256 cd1ec5b81a33aabc638a247455f919cb4eca1e98fa41d7a37c6572f0bba15f10
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
