@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pychecker
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pychecker/ChangeLog,v 1.46 2009/10/11 09:39:08 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pychecker/ChangeLog,v 1.47 2009/10/25 14:00:33 arfrever Exp $
+
+  25 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  pychecker-0.8.18.ebuild:
+  Set SUPPORT_PYTHON_ABIS.
 
   11 Oct 2009; Fabian Groffen <grobian@gentoo.org> pychecker-0.8.18.ebuild:
   Merge from Prefix
